--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   },
   "require": {
-    "php": "^7.3",
+    "php": ">=7.3",
     "rikudou/qr-payment-interface": "^1.0"
   },
   "require-dev": {
