--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "require-dev": {
     "endroid/qr-code": "^4.3",
     "friendsofphp/php-cs-fixer": "^3.1",
-    "phpstan/phpstan": "^0.12.99"
+    "phpstan/phpstan": "^0.12.99",
+    "bacon/bacon-qr-code": "^2.0"
   },
   "scripts": {
     "fixer": "php-cs-fixer fix src --verbose",
