--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "endroid/qr-code": "^4.3",
     "friendsofphp/php-cs-fixer": "^3.1",
     "phpstan/phpstan": "^0.12.99",
-    "bacon/bacon-qr-code": "^2.0"
+    "bacon/bacon-qr-code": "^2.0",
+    "chillerlan/php-qrcode": "^4.3"
   },
   "scripts": {
     "fixer": "php-cs-fixer fix src --verbose",
